it will fix footer overlap bug with container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,10 +36,10 @@ p, h1, h2 {
 
 /* --------- Background image */
 body {
-    background-image: url("../images/newback.jpg");
+    background-image: url("../images/newback.webp");
     background-size: cover;  
     background-position: center;  
-    background-repeat: repeat;
+    background-repeat:no-repeat;
 }
 
 /* --------- Container */
@@ -106,7 +106,6 @@ footer {
     background-color: #091c5d;
     margin-top: 5px;
     padding: 5px;
-    position: fixed;
     bottom: 0;
     width: 100%;
     font-size: 14px;
